--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Super Tic Tac Toe</h1>
+    <h1>Amaan Super Tic Tac Toe</h1>
     <div class="container">
       <div class="super-board" id="super-board"></div>
     </div>
