--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Amaan Super Tic Tac Toe</h1>
+    <h1>Super Tic Tac Toe</h1>
     <div class="container">
       <div class="super-board" id="super-board"></div>
     </div>
     <p id="message"></p>
-    <button onclick="resetGame()">Reset Game</button>
+    <button id="button" onclick="resetGame()">Reset Game</button>
     <script src="script.js"></script>
   </body>
 </html>
