--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Super Tic Tac Toe</title>
+    <title>ULTIMATE Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Super Tic Tac Toe</h1>
+    <h1>ULTIMATE TIC-TAC-TOE</h1>
     <div class="container">
       <div class="super-board" id="super-board"></div>
     </div>
