--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ULTIMATE Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Roboto&display=swap"
+    />
   </head>
   <body>
     <h1>ULTIMATE TIC-TAC-TOE</h1>
